--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "La Super Estacion 593",
-  "short_name": "Radio",
+  "short_name": "La Super Estacion 593",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#000000",
